# the-cradle-colorlight-i9-ecp5-amaranth-hdl

./: .env.toolchain  README.md  display-dependency-updates  display-dependency-updates.py  modeline.txt  pyproject.toml  reclean  reclean.py  redeploy  retest
docs/: the-plan.md
src/ecp5/: README.md  __init__.py  ehxplll.py
src/the_cradle/: __init__.py  blinky.py  builder.py  colorlight_i9.py  deployer.py  ecp5.py  the_cradle.py  vid_settings_640x480_59Hz94.py  vid_settings_720x576_50Hz.py  vid_settings_768x576_60Hz.py  vid_settings_800x600_56Hz25.py  vid_settings_960x540_50Hz.py  vid_settings_960x540_59Hz82.py  video.py
src/the_cradle/settings/: __init__.py  _pal.py  _quart_hd.py  _vga.py
tests/test_ecp5/: README.md  test_ehxplll.py
